--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+    margin:  0;
+    padding: 0;
+    box-sizing: border-box;
+    font-size: 18px;
+}
+body {
+    background-color: #f0fff6;
+}
